WS-00: new suggestion added.

--- a/starter-kits/tailwind/apps/drupal/templates/layout/page--node--article.html.twig
+++ b/starter-kits/tailwind/apps/drupal/templates/layout/page--node--article.html.twig
@@ -1,7 +1,7 @@
-{#{% extends "page.html.twig" %}#}
+{% extends "page.html.twig" %}
 
-{#{% block main %}#}
-{#  {{ drupal_entity('node', node.id, 'full_top') }}#}
-{#  {{ page.content }}#}
-{#  {{ drupal_entity('node', node.id, 'full_bottom') }}#}
-{#{% endblock %}#}
+{% block main %}
+  {{ drupal_entity('node', node.id, 'full_top') }}
+  {{ page.content }}
+  {{ drupal_entity('node', node.id, 'full_bottom') }}
+{% endblock %}
