--- a/starter-kits/tailwind/source/default/patterns/02-molecules/banner/banner.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/banner/banner.twig
@@ -24,7 +24,7 @@
 {# Template #}
 <div class="relative">
   {{ image }}
-  <div class="taiabsolute top-0 left-0 w-full h-full flex">
+  <div class="absolute top-0 left-0 w-full h-full flex">
     {% embed "@organisms/container/container.twig" with { teaser: teaser, headline: headline, classes: 'flex-1 flex ' ~ position_classes[position|default('center_center')]}  %}
       {% block content %}
         <div class="p-6 dark:text-white">
