WS-00: slider and banner update storybook.

--- a/starter-kits/tailwind/apps/drupal/templates/layout/page.html.twig
+++ b/starter-kits/tailwind/apps/drupal/templates/layout/page.html.twig
@@ -53,6 +53,7 @@
 
 {% embed "@templates/site-container.twig" with {
   primary_menu: page.primary_menu,
+  language_select: page.language_switcher,
   footer_menu: page.footer,
   highlighted: page.highlighted
 } %}
