(feature) Add flexbox to site container.

--- a/starter-kits/tailwind/source/default/patterns/04-templates/site-container.twig
+++ b/starter-kits/tailwind/source/default/patterns/04-templates/site-container.twig
@@ -6,7 +6,7 @@
 
 {{ highlighted }}
 
-<main class="main-content">
+<main class="main-content flex-1">
   {% block main %}
     <p>Main content</p>
   {% endblock %}
