--- a/examples/official-wingsuit/apps/storybook/patterns/05-pages/homepage/homepage.twig
+++ b/examples/official-wingsuit/apps/storybook/patterns/05-pages/homepage/homepage.twig
@@ -13,13 +13,13 @@
       <div class="text-center w-1/2 m-auto pb-8 text-gray-dark">{{ "Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups." }}</div>
       <div class="block md:flex pt-10">
         <div class="w-full md:w-1/3 md:pr-2 mb-5">
-          {{ pattern_preview('card', 'default') }}
+          {{ pattern_preview('card', {}, 'default') }}
         </div>
         <div class="w-full md:w-1/3 md:px-2 mb-5">
-          {{ pattern_preview('card', 'default') }}
+          {{ pattern_preview('card', {}, 'default') }}
         </div>
         <div class="w-full md:w-1/3 md:pl-2 mb-5">
-          {{ pattern_preview('card', 'default') }}
+          {{ pattern_preview('card', {}, 'default') }}
         </div>
       </div>
     </div>
