--- a/starter-kits/bootstrap/apps/storybook/patterns/05-pages/article/article.twig
+++ b/starter-kits/bootstrap/apps/storybook/patterns/05-pages/article/article.twig
@@ -1,17 +1,17 @@
 {% embed "@templates/site-container.twig"
   with {
   has_spacer: true,
-  primary_menu: pattern_preview('menu', 'primary'),
-  footer_menu_1: pattern_preview('menu', 'footer'),
-  footer_menu_2: pattern_preview('menu', 'footer'),
-  footer_menu_3: pattern_preview('menu', 'footer'),
-  footer_menu_4: pattern_preview('menu', 'footer')
+  primary_menu: pattern_preview('menu', {}, 'primary'),
+  footer_menu_1: pattern_preview('menu', {}, 'footer'),
+  footer_menu_2: pattern_preview('menu', {}, 'footer'),
+  footer_menu_3: pattern_preview('menu', {}, 'footer'),
+  footer_menu_4: pattern_preview('menu', {}, 'footer')
 
 } %}
   {% block main %}
     {% set more %}
       {% set cells = [
-        pattern_preview('card', null, {'image': null}),
+        pattern_preview('card', {'image': null}),
         pattern_preview('card'),
         pattern_preview('card')
         ] %}
