--- a/starter-kits/bootstrap/apps/storybook/patterns/05-pages/homepage/homepage.twig
+++ b/starter-kits/bootstrap/apps/storybook/patterns/05-pages/homepage/homepage.twig
@@ -1,10 +1,10 @@
 {% embed "@templates/site-container.twig"
   with {
-  primary_menu: pattern_preview('menu', 'primary'),
-  footer_menu_1: pattern_preview('menu', 'footer'),
-  footer_menu_2: pattern_preview('menu', 'footer'),
-  footer_menu_3: pattern_preview('menu', 'footer'),
-  footer_menu_4: pattern_preview('menu', 'footer')
+  primary_menu: pattern_preview('menu', {},'primary'),
+  footer_menu_1: pattern_preview('menu', {}, 'footer'),
+  footer_menu_2: pattern_preview('menu', {}, 'footer'),
+  footer_menu_3: pattern_preview('menu', {}, 'footer'),
+  footer_menu_4: pattern_preview('menu', {}, 'footer')
 } %}
   {% block main %}
     {% embed "@organisms/section/section.twig" with { columns: 1, padding_top: "large" } %}
@@ -20,7 +20,7 @@
         {{ pattern_preview('card') }}
       {% endblock %}
       {% block column_2 %}
-        {{ pattern_preview('card', '', {'headline': ' Second Card'}) }}
+        {{ pattern_preview('card', {'headline': ' Second Card'}) }}
       {% endblock %}
       {% block column_3 %}
         {{ pattern_preview('card') }}
@@ -40,7 +40,7 @@
         {% include "@atoms/rich-text/rich-text.twig" with { text: "<h2 class=text-center>Banner</h2>" }%}
       {% endblock %}
       {% block column_1 %}
-        {{ pattern_preview('banner', 'center_left') }}
+        {{ pattern_preview('banner', {}, 'center_left') }}
       {% endblock %}
     {% endembed %}
     {% embed "@organisms/section/section.twig" with { columns: 3 } %}
@@ -48,13 +48,13 @@
         {% include "@atoms/rich-text/rich-text.twig" with { text: "<h2 class=text-center>Cards</h2>" }%}
       {% endblock %}
       {% block column_1 %}
-        {{ pattern_preview('card', '', {'image': 'https://satyr.io/460x402'}) }}
+        {{ pattern_preview('card', {'image': 'https://satyr.io/460x402'}) }}
       {% endblock %}
       {% block column_2 %}
-        {{ pattern_preview('card', '', {'image': 'null'}) }}
+        {{ pattern_preview('card', {'image': 'null'}) }}
       {% endblock %}
       {% block column_3 %}
-        {{ pattern_preview('card', '', {'image': 'null'}) }}
+        {{ pattern_preview('card', {'image': 'null'}) }}
       {% endblock %}
     {% endembed %}
   {% endblock %}
