--- a/starter-kits/tailwind/apps/storybook/patterns/05-pages/homepage/homepage.twig
+++ b/starter-kits/tailwind/apps/storybook/patterns/05-pages/homepage/homepage.twig
@@ -1,11 +1,11 @@
 {% embed "@templates/site-container.twig"
   with {
-  primary_menu: pattern_preview('menu', 'primary'),
+  primary_menu: pattern_preview('menu', {}, 'primary'),
   language_select: pattern_preview('language_select'),
-  footer_menu_1: pattern_preview('menu', 'footer'),
-  footer_menu_2: pattern_preview('menu', 'footer'),
-  footer_menu_3: pattern_preview('menu', 'footer'),
-  footer_menu_4: pattern_preview('menu', 'footer')
+  footer_menu_1: pattern_preview('menu', {}, 'footer'),
+  footer_menu_2: pattern_preview('menu', {}, 'footer'),
+  footer_menu_3: pattern_preview('menu', {}, 'footer'),
+  footer_menu_4: pattern_preview('menu', {}, 'footer')
 } %}
   {% block main %}
     {% embed "@organisms/section/section.twig" with { columns: 1 } %}
@@ -18,13 +18,13 @@
         {% include "@atoms/rich-text/rich-text.twig" with { text: "<h2 class=text-center>Section title</h2>" }%}
       {% endblock %}
       {% block column_1 %}
-        {{ pattern_preview('card', 'default') }}
+        {{ pattern_preview('card', {}, 'default') }}
       {% endblock %}
       {% block column_2 %}
-        {{ pattern_preview('card', 'default', {'headline': ' Second Card'}) }}
+        {{ pattern_preview('card', {'headline': ' Second Card'}, 'default') }}
       {% endblock %}
       {% block column_3 %}
-        {{ pattern_preview('card', 'default', {'headline': 'Overwritten headline', 'image': null}) }}
+        {{ pattern_preview('card', {'headline': 'Overwritten headline', 'image': null}, 'default') }}
       {% endblock %}
     {% endembed %}
     {% embed "@organisms/section/section.twig" with { columns: 1, display_header_region: true } %}
@@ -41,7 +41,7 @@
         {% include "@atoms/rich-text/rich-text.twig" with { text: "<h2 class=text-center>Banner</h2>" }%}
       {% endblock %}
       {% block column_1 %}
-        {{ pattern_preview('banner', null) }}
+        {{ pattern_preview('banner') }}
       {% endblock %}
     {% endembed %}
     {% embed "@organisms/section/section.twig" with { columns: 3 } %}
@@ -49,13 +49,13 @@
         {% include "@atoms/rich-text/rich-text.twig" with { text: "<h2 class=text-center>Cards</h2>" }%}
       {% endblock %}
       {% block column_1 %}
-        {{ pattern_preview('card', 'default') }}
+        {{ pattern_preview('card', {}, 'default') }}
       {% endblock %}
       {% block column_2 %}
-        {{ pattern_preview('card', 'default') }}
+        {{ pattern_preview('card', {}, 'default') }}
       {% endblock %}
       {% block column_3 %}
-        {{ pattern_preview('card', 'default') }}
+        {{ pattern_preview('card', {}, 'default') }}
       {% endblock %}
     {% endembed %}
   {% endblock %}
