(fix) Fix bootrap starter kit to support new pattern twig functions.

--- a/starter-kits/bootstrap/apps/storybook/patterns/05-pages/article/article.twig
+++ b/starter-kits/bootstrap/apps/storybook/patterns/05-pages/article/article.twig
@@ -18,6 +18,6 @@
       {% embed '@organisms/grid/grid.twig' with {config: 'equal', columns: 3, gutter: 'default', cells: cells} %}
       {% endembed %}
     {% endset %}
-    {{ pattern_preview('article', '', {more: more}) }}
+    {{ pattern_preview('article', {more: more}) }}
   {% endblock %}
 {% endembed %}
