--- a/starter-kits/bootstrap/source/default/patterns/01-atoms/logo/logo.twig
+++ b/starter-kits/bootstrap/source/default/patterns/01-atoms/logo/logo.twig
@@ -9,6 +9,5 @@
 
 {# TEMPLATE #}
 <a class="navbar-brand" href="{{ path('<front>') }}">
-  <img src="{{ file_url('ws-assets://images/logo.svg') }}" alt="Brand Logo" style="max-width: 60px">
-  <span class="ml-3">BRAND EXAMPLE</span>
+  <img src="{{ file_url('ws-assets://images/logo.svg') }}" alt="Brand Logo" style="width: 100%; max-width: 240px">
 </a>
