--- a/starter-kits/tailwind/source/default/patterns/02-molecules/banner/banner.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/banner/banner.twig
@@ -6,8 +6,12 @@
  * See banner.wingsuit.yaml for documentation.
  */
 #}
+{# DEFAULTS #}
+
+{% set position = position|default('center_center') %}
+
 {# SETTINGS #}
-{% set position_classes = {
+{% set position_classes =  {
   'top_left': '',
   'top_center': 'text-center justify-center ',
   'top_right': 'text-right justify-end ',
@@ -22,15 +26,14 @@
 {% set teaser %}{{- teaser -}}{% endset %}
 
 {# Template #}
-<div class="relative">
+<div{{ attributes|default(create_attribute()).addClass('relative') }}>
   {{ image }}
   <div class="absolute top-0 left-0 w-full h-full flex">
-    {% embed "@organisms/container/container.twig" with { teaser: teaser, headline: headline, classes: 'flex-1 flex ' ~ position_classes[position|default('center_center')]}  %}
+    {% embed "@organisms/container/container.twig" with {region_attributes: region_attributes, teaser: teaser, headline: headline, classes: 'flex-1 flex ' ~ position_classes[position]}  only %}
       {% block content %}
         <div class="p-6 dark:text-white">
-          {% include "@atoms/headline/headline.twig" with {headline: headline, variant: 'h2'} only %}
           {% if teaser is not empty %}
-            <div class="text-xl">
+            <div{{ region_attributes.teaser|default(create_attribute()).addClass('text-xl') }}>
               {{ teaser }}
             </div>
           {% endif %}
