--- a/docs/source/default/patterns/01-atoms/logo/logo.twig
+++ b/docs/source/default/patterns/01-atoms/logo/logo.twig
@@ -8,6 +8,6 @@
 #}
 
 {# TEMPLATE #}
-<a class="pr-8 block" href="{{ path('<front>') }}">
-  <img src="{{ file_url('ws-assets://images/logo.svg') }}" alt="Brand Logo" class="w-full max-w-7xl">
+<a class="pr-2 block" href="{{ path('<front>') }}">
+  <img src="{{ file_url('ws-assets://images/wsuit-logo-inline.svg') }}" alt="Brand Logo" class="w-full max-w-7xl">
 </a>
