--- a/docs/source/default/patterns/02-molecules/hero/hero.twig
+++ b/docs/source/default/patterns/02-molecules/hero/hero.twig
@@ -10,20 +10,30 @@
 {# TEMPLATE #}
 
 <section class="text-gray-700 body-font">
-  <div class="flex md:flex-row flex-col">
-
-    <div class="flex flex-col pt-8 items-center text-center md:w-1/2 md:pr-16 md:items-start md:text-left mb-16 md:mb-0 lg:flex-grow lg:pr-24">
-      <div{{ region_attributes.pre_headline|default(create_attribute()).addClass('uppercase tracking-loose font-medium w-full mb-4') }}>{{ pre_headline }}</div>
-      {% include "@atoms/headline/headline.twig" with {headline: headline, variant: 'h3', tag_name: 'h1', attributes: region_attributes.headline } %}
-      <div{{ region_attributes.text|default(create_attribute()).addClass('mb-8 font-medium leading-relaxed text-l max-w-sm ') }}>{{ text }}</div>
-      <div class="flex justify-center">
-        <div{{ region_attributes.button|default(create_attribute()).addClass('mr-5') }}>{{ button }}</div>
-        <div{{ region_attributes.button_second }}>{{ button_second }}</div>
-      </div>
+  <div class="flex flex-col">
+    <div class="flex flex-col pt-8 items-center text-center md:items-start md:text-left mb-16 md:mb-0 lg:flex-grow">
+      {% if pre_headline is not empty %}
+        <div{{ region_attributes.pre_headline|default(create_attribute()).addClass('uppercase tracking-loose font-medium w-full mb-4') }}>{{ pre_headline }}</div>
+      {% endif %}
+      {% include "@atoms/headline/headline.twig" with {headline: headline, variant: 'h1', tag_name: 'h1', attributes: region_attributes.headline } %}
+      {% if text is not empty %}
+        <div{{ region_attributes.text|default(create_attribute()).addClass('mb-8 font-medium leading-relaxed text-l max-w-sm ') }}>{{ text }}</div>
+      {% endif %}
     </div>
-
-    <div {{ region_attributes.image|default(create_attribute()).addClass('w-5/6 md:w-1/2 lg:max-w-lg lg:w-full') }}>
+    <div {{ region_attributes.image|default(create_attribute()).addClass('w-full') }}>
       {{ image }}
     </div>
+    {% if sub_headline is not empty %}
+      <div class="text-center pt-8">
+        {% include "@atoms/headline/headline.twig" with {headline: sub_headline, variant: 'h4', tag_name: 'h3', attributes: region_attributes.headline } %}
+      </div>
+    {% endif %}
+    {% if button is not empty %}
+      <div class="flex justify-center pt-6">
+        <div{{ region_attributes.button|default(create_attribute()).addClass('mr-5') }}>{{ button }}</div>
+        <div{{ region_attributes.button_second|default(create_attribute()).addClass('mr-5') }}>{{ button_second }}</div>
+        <div{{ region_attributes.button_third }}>{{ button_third }}</div>
+      </div>
+    {% endif %}
   </div>
 </section>
