--- a/docs/source/default/patterns/03-organisms/header/header.twig
+++ b/docs/source/default/patterns/03-organisms/header/header.twig
@@ -1,29 +1,15 @@
 {# SETTINGS #}
 {% set header_classes = ([
-  'header-offset bg-white w-full z-30 top-0 text-white',
-  variant == 'fixed'? 'fixed h-18 w-full',
-  variant == 'sticky'? 'sticky',
+  'header-offset bg-teal-200 w-full z-30 top-0 text-white',
+  variant == 'fixed'? 'fixed h-12 w-full',
+  variant == 'sticky'? 'sticky py-2',
 ]) | sort | join(' ') | trim %}
 
 {# TEMPLATE #}
 <header class="{{ header_classes }}">
-  {% embed "@organisms/container/container.twig" with {menu: menu, language_select: language_select} only%}
-    {% block content %}
-      <div class="flex py-5 justify-between md:flex-row">
-        <div class="w-3/6 md:w-2/6 max-w-xs md:max-w-7xl">
-          {% include "@atoms/logo/logo.twig" only %}
-        </div>
-        <div class="block lg:hidden" @click="menuIsOpen = !menuIsOpen">
-          {% include "@atoms/hamburger/hamburger.twig" only %}
-        </div>
-        <div class="w-full flex-grow hidden text-black z-20 mt-2 bg-white absolute lg:static left-6 top-11 w-full lg:flex lg:justify-end lg:items-center lg:w-auto lg:block lg:mt-0 lg:bg-transparent" :class="{'block': menuIsOpen, 'hidden': !menuIsOpen}">
-          {{ menu }}
-        </div>
-        <ul class="list-reset flex justify-end flex-1 items-center mr-8 md:mr-0">
-          <li class="mr-4 md:mr-7">{{ language_select }}</li>
-        </ul>
-      </div>
-    {% endblock %}
-  {% endembed %}
-  {# <hr class="border-b border-gray-100 opacity-25 my-0 py-0"> #}
+  <div class="w-60 h-full flex items-center max-w-xs md:max-w-7xl">
+    {% include "@atoms/logo/logo.twig" only %}
+    <span class="text-xs text-gray-300">v1.0</span>
+    <svg width="60" height="60" viewBox="0 0 250 250" aria-hidden="true" style="fill: rgb(0, 0, 0); color: rgb(255, 255, 255); position: absolute; top: 0px; border: 0px; right: 0px; z-index: 10;"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" class="octo-arm" style="transform-origin: 130px 106px;"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg>
+  </div>
 </header>
