--- a/docs/source/default/tokens/tokens.css
+++ b/docs/source/default/tokens/tokens.css
@@ -1,41 +1,28 @@
-/* poppins-regular - latin */
+/* inter-regular - latin */
 @font-face {
-  font-family: 'Poppins';
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
-  src: url('fonts/poppins/poppins-v15-latin-regular.eot'); /* IE9 Compat Modes */
+  src: url('fonts/inter/inter-v3-latin-regular.eot'); /* IE9 Compat Modes */
   src: local(''),
-  url('fonts/poppins/poppins-v15-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('fonts/poppins/poppins-v15-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-  url('fonts/poppins/poppins-v15-latin-regular.woff') format('woff'), /* Modern Browsers */
-  url('fonts/poppins/poppins-v15-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('fonts/poppins/poppins-v15-latin-regular.svg#Poppins') format('svg'); /* Legacy iOS */
+  url('fonts/inter/inter-v3-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('fonts/inter/inter-v3-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+  url('fonts/inter/inter-v3-latin-regular.woff') format('woff'), /* Modern Browsers */
+  url('fonts/inter/inter-v3-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('fonts/inter/inter-v3-latin-regular.svg#Inter') format('svg'); /* Legacy iOS */
 }
-/* poppins-500 - latin */
+/* inter-600 - latin */
 @font-face {
-  font-family: 'Poppins';
+  font-family: 'Inter';
   font-style: normal;
-  font-weight: 500;
-  src: url('fonts/poppins/poppins-v15-latin-500.eot'); /* IE9 Compat Modes */
+  font-weight: 600;
+  src: url('fonts/inter/inter-v3-latin-600.eot'); /* IE9 Compat Modes */
   src: local(''),
-  url('fonts/poppins/poppins-v15-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('fonts/poppins/poppins-v15-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
-  url('fonts/poppins/poppins-v15-latin-500.woff') format('woff'), /* Modern Browsers */
-  url('fonts/poppins/poppins-v15-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('fonts/poppins/poppins-v15-latin-500.svg#Poppins') format('svg'); /* Legacy iOS */
-}
-/* poppins-700 - latin */
-@font-face {
-  font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 700;
-  src: url('fonts/poppins/poppins-v15-latin-700.eot'); /* IE9 Compat Modes */
-  src: local(''),
-  url('fonts/poppins/poppins-v15-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('fonts/poppins/poppins-v15-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-  url('fonts/poppins/poppins-v15-latin-700.woff') format('woff'), /* Modern Browsers */
-  url('fonts/poppins/poppins-v15-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('fonts/poppins/poppins-v15-latin-700.svg#Poppins') format('svg'); /* Legacy iOS */
+  url('fonts/inter/inter-v3-latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('fonts/inter/inter-v3-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
+  url('fonts/inter/inter-v3-latin-600.woff') format('woff'), /* Modern Browsers */
+  url('fonts/inter/inter-v3-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('fonts/inter/inter-v3-latin-600.svg#Inter') format('svg'); /* Legacy iOS */
 }
 html {
   height: 100%;
