(feature) Add highlight.js support for mdx.

--- a/docs/apps/pages/pages/assets/images/images.twig
+++ b/docs/apps/pages/pages/assets/images/images.twig
@@ -7,5 +7,6 @@
  */
 #}
 {% include "@templates/site-container.twig" with {
-  content: content
+  menu: pattern('menu', {items: primary_menu.items}, 'primary'),
+  content: pattern('rich_text', {text: content})
 } %}
