--- a/docs/source/default/patterns/01-atoms/logo/logo.twig
+++ b/docs/source/default/patterns/01-atoms/logo/logo.twig
@@ -9,5 +9,5 @@
 
 {# TEMPLATE #}
 <a class="pr-2 block" href="{{ path('<front>') }}">
-  <img src="{{ file_url('ws-assets://images/wsuit-logo-inline.svg') }}" alt="Brand Logo" class="w-full max-w-7xl">
+  <img src="{{ file_url('ws-assets://images/logo.svg') }}" alt="Brand Logo" class="w-full max-w-7xl">
 </a>
