--- a/docs/source/default/patterns/01-atoms/rich-text/rich-text.twig
+++ b/docs/source/default/patterns/01-atoms/rich-text/rich-text.twig
@@ -10,5 +10,7 @@
 
 {# TEMPLATE #}
 <div class="prose dark:prose-dark lg:prose-lg max-w-none">
-  {{ text }}
+  {% block text %}
+    {{ text }}
+  {% endblock %}
 </div>
