--- a/docs/apps/storybook/patterns/05-pages/article/article.twig
+++ b/docs/apps/storybook/patterns/05-pages/article/article.twig
@@ -2,23 +2,21 @@
   with {
   has_spacer: true,
   language_select: pattern_preview('language_select'),
-  primary_menu: pattern_preview('menu', {}, 'primary'),
-  footer_menu_1: pattern_preview('menu', {}, 'footer'),
-  footer_menu_2: pattern_preview('menu', {}, 'footer'),
-  footer_menu_3: pattern_preview('menu', {}, 'footer'),
-  footer_menu_4: pattern_preview('menu', {}, 'footer')
-
+  menu: pattern_preview('menu', {}, 'primary'),
+  show_hamburger: true,
 } %}
-  {% block main %}
-    {% set more %}
-      {% set cells = [
-        pattern_preview('card', {}, 'default'),
-        pattern_preview('card', {}, 'default'),
-        pattern_preview('card', {}, 'default')
-        ] %}
-      {% embed '@organisms/grid/grid.twig' with {config: 'equal', columns: 3, gutter: 'default', cells: cells} %}
-      {% endembed %}
-    {% endset %}
-    {{ pattern_preview('article', {more: more}) }}
+
+  {% block content %}
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros,
+    pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus.
+    Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
+    in pretium orci vestibulum eget. Class aptent taciti sociosqu ad litora torquent
+    per conubia nostra, per inceptos himenaeos. Duis pharetra luctus lacus ut
+    vestibulum. Maecenas ipsum lacus, lacinia quis posuere ut, pulvinar vitae dolor.
+    Integer eu nibh at nisi ullamcorper sagittis id vel leo. Integer feugiat
+    faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim nunc.
+    Phasellus bibendum turpis ut ipsum egestas, sed sollicitudin elit convallis.
+    Cras pharetra mi tristique sapien vestibulum lobortis. Nam eget bibendum metus,
+    non dictum mauris. Nulla at tellus sagittis, viverra est a, bibendum metus.
   {% endblock %}
 {% endembed %}
