--- a/docs/source/default/patterns/02-molecules/menu/_menu--primary.twig
+++ b/docs/source/default/patterns/02-molecules/menu/_menu--primary.twig
@@ -1,10 +1,20 @@
-<ul class="list-reset lg:flex flex-col flex-1">
-  {% for item in items %}
-    <li class="mb-4 lg:py-0">
-      <a class="p-2 text-gray-600 hover:text-gray-900 hover:underline {% if (current_path == item.url) %} bg-teal-300 {% endif %}" href="{{ item.url }}">
-        {{ item.title }}
-      </a>
-    </li>
-  {% endfor %}
-</ul>
-
+<div class="w-full flex-grow text-black z-20 mt-2 bg-white h-full overflow-y-scroll visible-height lg:overflow-y-visible fixed lg:static left-0 top-11 bg-yellow lg:bg-transparent" :class="{'block': menuIsOpen, 'hidden lg:inline-block': !menuIsOpen}">
+  <ul class="list-reset text-center lg:text-left">
+    {% for item in items %}
+      <li class="">
+        <div class="p-2 my-2.5 uppercase font-bold">
+          {{ item.title }}
+        </div>
+        {% if item.below is not empty %}
+          <ul class="list-reset mb-7">
+            {% for sub_item in item.below %}
+              <li class="mb-4">
+                <a class="p-2 inline-block text-gray-600 hover:text-gray-900 hover:underline {% if (sub_item.in_active_trail) %} bg-teal-300 {% endif %}" href="{{ sub_item.url }}">{{ sub_item.title }}</a>
+              </li>
+            {% endfor %}
+          </ul>
+        {% endif %}
+      </li>
+    {% endfor %}
+  </ul>
+</div>
