(feature) Add postcss 8 support.

--- a/starter-kits/tailwind/source/default/patterns/03-organisms/slider/slider.css
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/slider/slider.css
@@ -32,10 +32,7 @@
 
   &.splide__pagination__spacing-default .splide__pagination {
      @apply mt-8;
-
-    @screen md {
-      @apply mt-12;
-    }
+     @apply md:mt-12;
   }
 }
 
