(fix) Add btn class as button identifier across starter-kits.

--- a/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.twig
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.twig
@@ -12,7 +12,7 @@
   Classes
 #}
 {% set classes = [
-  'flex items-center justify-center inline-flex border-2 py-1.5 px-3 focus:outline-none rounded transition-colors duration-500',
+  'btn flex items-center justify-center inline-flex border-2 py-1.5 px-3 focus:outline-none rounded transition-colors duration-500',
   expanded ? 'w-full',
   variant == 'outline' ? 'border-2',
   icon_alignment == 'left' ? 'flex-row-reverse' : 'flex-row',
