--- a/docs/source/default/patterns/01-atoms/rich-text/rich-text.twig
+++ b/docs/source/default/patterns/01-atoms/rich-text/rich-text.twig
@@ -9,7 +9,7 @@
 #}
 
 {# TEMPLATE #}
-<div class="prose dark:prose-dark lg:prose-lg max-w-none">
+<div class="prose dark:prose-dark lg:prose-lg">
   {% block text %}
     {{ text }}
   {% endblock %}
