--- a/docs/apps/pages/pages/docs.twig
+++ b/docs/apps/pages/pages/docs.twig
@@ -7,7 +7,8 @@
  */
 #}
 {% include "@templates/site-container.twig" with {
-  menu: pattern('menu', {items: primary_menu.items}, 'primary'),
+  menu: pattern_preview('menu', {}, 'primary'),
+  footer_menu: null,
   show_hamburger: true,
   content: pattern('rich_text', {text: content})
 } %}
