--- a/docs/source/default/patterns/02-molecules/menu/_menu--primary.twig
+++ b/docs/source/default/patterns/02-molecules/menu/_menu--primary.twig
@@ -1,7 +1,7 @@
-<div class="w-full flex-grow text-black z-20 mt-2 bg-white h-full overflow-y-scroll visible-height lg:overflow-y-visible fixed lg:static left-0 top-11 bg-yellow lg:bg-transparent" :class="{'block': menuIsOpen, 'hidden lg:inline-block': !menuIsOpen}">
+<div class="w-full flex-grow text-black z-20 mt-2 lg:mt-0 lg:-mt-2.5  bg-white h-full overflow-y-scroll lg:overflow-y-visible fixed lg:static left-0 top-11 bg-yellow lg:bg-transparent" :class="{'block': menuIsOpen, 'hidden lg:inline-block': !menuIsOpen}">
   <ul class="list-reset text-center lg:text-left">
     {% for item in items %}
-      <li class="">
+      <li>
         <div class="p-2 my-2.5 uppercase font-bold">
           {{ item.title }}
         </div>
@@ -9,7 +9,7 @@
           <ul class="list-reset mb-7">
             {% for sub_item in item.below %}
               <li class="mb-2">
-                <a class="p-2 inline-block text-gray-600 hover:text-gray-900 hover:underline {% if (sub_item.in_active_trail) %} bg-teal-300 {% endif %}" href="{{ sub_item.url }}">{{ sub_item.title }}</a>
+                <a class="p-2 inline-block text-gray-600 hover:text-gray-900 hover:underline {% if (current_path == sub_item.url) %} bg-teal-300 {% endif %}" href="{{ sub_item.url }}">{{ sub_item.title }}</a>
               </li>
             {% endfor %}
           </ul>
