--- a/docs/source/default/patterns/03-organisms/section/section.twig
+++ b/docs/source/default/patterns/03-organisms/section/section.twig
@@ -65,8 +65,9 @@
 } only %}
   {% block content %}
   {% if header is not empty and display_header_region == true %}
-    <div class="mb-5 md:mb-10 {{ region_attributes.header.class }}">{{ header }}</div>
+    <div class="mb-5 md:mb-10 {{ region_attributes.header.class }}"></div>
   {% endif %}
+    {{ header }}
   {{ content }}
   {% endblock %}
 {% endembed %}
