--- a/docs/source/default/patterns/01-atoms/headline/headline.twig
+++ b/docs/source/default/patterns/01-atoms/headline/headline.twig
@@ -4,13 +4,13 @@
 {% set spacing_bottom = spacing_bottom|default('default') %}
 {%
   set classes = ([
+  center == true ? 'text-center',
   'headline text-black dark:text-gray-50 font-sans',
   pattern_configuration('headline', variant, 'size'),
   pattern_configuration('headline', variant, 'spacing_bottom')[spacing_bottom],
   classes,
 ]) | sort | join(' ') | trim
 %}
-
 {# TEMPLATES #}
 <{{ tag_name }} {{ attributes.addClass(classes) }}>
 {{ title_prefix }}
